--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
 
+  <section>
+    <div class="banner">
+      <img class="img-flex" src="placeholder-16by9.svg" alt="placeholder">
+      <div class="banner-content">
+        <h2>Ultra Super Fighting Force</h2>
+        <p>Control giant, fighting, transforming robots and save the world!</p>
+        <a href="">Join USFF</a>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
