Fix padding and margins

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
 
-  <section>
-    <div class="banner">
-      <img class="img-flex" src="placeholder-16by9.svg" alt="placeholder">
-      <div class="banner-content">
+  <div class="banner">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <div class="banner-content">
+      <div class="icon">
+        <img src="images/mecha.svg" alt="">
+      </div>
+
+      <div class="banner-text">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
-        <a href="">Join USFF</a>
+        <a class="btn btn-big" href="#">Join USFF</a>
       </div>
     </div>
-  </section>
+  </div>
 
 </body>
 </html>
